[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

################################################
[tool.pylint.main]
################################################

init-hook = """
import sys, os;
from pylint.config import find_pylintrc;
cwd_path = os.path.abspath(os.path.dirname(find_pylintrc() or (os.getcwd() + '/')));
sys.path.insert(0, cwd_path)
"""

################################################
[tool.pylint.exceptions]
################################################

# Exceptions that will emit a warning when caught.
overgeneral-exceptions = ["BaseException", "Exception"]

################################################
[tool.pylint.format]
################################################

# Expected format of line ending, e.g. empty (any line ending), LF or CRLF.
# expected-line-ending-format =

# Regexp for a line that is allowed to be longer than the limit.
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"

# Number of spaces of indent required inside a hanging or continued line.
indent-after-paren = 4

# String used as indentation unit. This is usually "    " (4 spaces) or "\t" (1
# tab).
indent-string = "    "

# Maximum number of characters on a single line.
max-line-length = 130

# Maximum number of lines in a module.
max-module-lines = 1000

################################################
[tool.pylint."messages control"]
################################################

disable = [
    # Ignore bad option values because some values are only supported in Python 3 e.g., "consider-using-with"
    "consider-using-f-string",
]

################################################
[tool.isort]
################################################

multi_line_output = 4
lines_after_imports = -1
line_length = 130
force_single_line = false
length_sort = false
from_first = false
force_alphabetical_sort_within_sections = true
src_paths = ["lib/"]

sections = [
    # __future__ imports
    "FUTURE",
    # standard library
    "STDLIB",
    # initialization
    "INIT",
    # local folder
    "LOCALFOLDER",
    # first party libraries
    "FIRSTPARTY",
    # third party libraries
    "THIRDPARTY",
]

known_init = ["__init__"]
known_local_folder = ["canonical", "conftest", "run_all_tests"]
known_first_party = ["yaml"]
known_third_party = ["pytest"]

################################################
[tool.mypy]
################################################

strict = false
follow_imports = "normal"
pretty = true
show_error_codes = true
mypy_path = ["lib/", "tests/lib/"]
raise_exceptions = true
cache_dir = ".tmp/mypy"

disallow_incomplete_defs = true

warn_redundant_casts = true
warn_return_any = false
warn_unreachable = false

check_untyped_defs = false

################################################
[tool.pyright]
################################################

reportMissingImports = true
reportMissingTypeStubs = true
reportTypeCommentUsage = false
reportUnusedImport = true
extraPaths = ["lib/", "tests/lib/"]
exclude = [
    "**/.git/",
    "**/.mypy_cache/",
    "**/.nox/",
    "**/.pytest_cache/",
    "**/.ruff_cache/",
    "**/.tox/",
    "**/.venv/",
    "**/.yarn/",
    "**/_Packages/",
    "**/_Packaging/",
    "**/__PACKAGES__/",
    "**/__pycache__/",
    "**/_test/",
    "**/node_modules/",
    "Lib/",
    "Obj/",
    "cmake-*/",

    "*.build",
]
ignore = []


################################################
[tool.pytest.ini_options]
################################################

minversion = "6.0"
addopts = [
    "--capture=tee-sys",
    "--color=yes",
    "--doctest-modules",
    "--doctest-report=ndiff",
    "--showlocals",
    "--verbose",
]
cache_dir = ".tmp/pytest"
log_cli = true
doctest_optionflags = [
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
    "NORMALIZE_WHITESPACE",
]
doctest_encoding = "utf-8"

# Order matters for these
testpaths = ["tests/lib/"]
norecursedirs = [".*", "_*", "node_modules", "tmp*"]
