#
# Configuration for PyYAML package.
#

[pycodestyle]
max_line_length = 120

[metadata]
license_file = LICENSE

[tox:tox]
envlist = py27,pypy3,py36,py37,py38,py39,py310
requires =
    tox-pyenv
    Cython
tox_pyenv_fallback = True

[testenv]
deps =
    Cython
extras =
    Cython
commands =
    {envpython} --version
    {envpython} setup.py build
    {envpython} tests/lib/test_all.py
passenv = PYYAML_TEST_GROUP

# The INCLUDE and LIB directories to build the '_yaml' extension.
# You may also set them using the options '-I' and '-L'.
[build_ext]

# List of directories to search for 'yaml.h' (separated by ':').
#include_dirs=/usr/local/include:../../include

# List of directories to search for 'libyaml.a' (separated by ':').
#library_dirs=/usr/local/lib:../../lib

# An alternative compiler to build the extension.
#compiler=mingw32

# Additional preprocessor definitions might be required.
#define=YAML_DECLARE_STATIC

# The following options are used to build PyYAML Windows installer
# for Python 2.7 on my PC:
#include_dirs=../../../libyaml/tags/0.1.4/include
#library_dirs=../../../libyaml/tags/0.1.4/win32/vs2008/output/release/lib
#define=YAML_DECLARE_STATIC
